syntax = "proto3";

package org.cyk.armeria.grpc.blog;
option java_package = "org.cyk.armeria.grpc.blog";
option java_multiple_files = true;


import "google/protobuf/empty.proto";

service BlogService {
  rpc CreateBlog (CreateBlogReq) returns (CreateBlogResp) {}
  rpc QueryBlogById (QueryBlogByIdReq) returns (QueryBlogByIdResp) {}
  rpc QueryBlogByIds (QueryBlogByIdsReq) returns (QueryBlogByIdsResp) {}
  rpc UpdateBlogById (UpdateBlogByIdReq) returns (UpdateBlogResp) {}
  rpc DeleteBlogById (DeleteBlogByIdReq) returns (google.protobuf.Empty) {}
}

message CreateBlogReq {
  string title = 1;
  string content = 2;
}
message CreateBlogResp {
  Blog blog = 1;
  optional string errorMsg = 2;
}

message QueryBlogByIdReq {
  int32 id = 1;
}
message QueryBlogByIdResp {
  optional Blog blog = 1;
}

message QueryBlogByIdsReq {
  repeated int32 ids = 1;
}
message QueryBlogByIdsResp {
  repeated Blog blogs = 1;
}

message UpdateBlogByIdReq {
  int32 id = 1;
  string title = 2;
  string content = 3;
}
message UpdateBlogResp {
  Blog blog = 1;
  optional string errorMsg = 2;
}

message DeleteBlogByIdReq {
  int32 id = 1;
}

message Blog {
  int32 id = 1;
  string title = 2;
  string content = 3;
  int64 createdAt = 4;
  int64 modifiedAt = 5;
}
